added fetch and markup

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,6 @@
     <div class="wrapper">
       <div id="weather" class="weather"></div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
