--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,15 @@
   </head>
   <body>
     <div class="wrapper">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Current weather conditions (Enter your city)"
+        />
+        <button type="submit">Search</button>
+      </form>
       <div id="weather" class="weather"></div>
     </div>
     <script src="script.js"></script>
